# pintar

./: pyproject.toml
src/pintar/: __init__.py  _util.py  ansi.py  colors.py  core.py  logging.py
src/pintar/config/: pintar_custom_log_theme.json
src/test/: test_main.py
