[project]
name = "pintar"
version = "0.5.0"
description = "librería Python para colorear texto de forma felxible en terminal con códigos ANSI"
readme = "README.md"
authors = [
    { name = "michiTrader", email = "iden.c63@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
