[project]
name = "pintar"
version = "0.7.2"
description = "librería Python para colorear texto de forma felxible en terminal con códigos ANSI"
readme = "README.md"
authors = [
    { name = "michiTrader", email = "iden.c63@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
